src/OpenCvSharpExtern/core.h

CVAPI(ExceptionStatus) core_convertScaleAbs(cv::_InputArray* src, cv::_OutputArray* dst, double alpha, double beta)
{
    return cvTry([&] {
    cv::convertScaleAbs(*src, *dst, alpha, beta);
    });
}
CVAPI(ExceptionStatus) core_LUT(cv::_InputArray* src, cv::_InputArray* lut, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::LUT(*src, *lut, *dst);
    });
}
CVAPI(ExceptionStatus) core_sum(cv::_InputArray* src, interop::Scalar* returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::sum(*src));
    });
}
CVAPI(ExceptionStatus) core_countNonZero(cv::_InputArray* src, int* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::countNonZero(*src);
    });
}
CVAPI(ExceptionStatus) core_findNonZero(cv::_InputArray* src, cv::_OutputArray* idx)
{
    return cvTry([&] {
    cv::findNonZero(*src, *idx);
    });
}
CVAPI(ExceptionStatus) core_mean(cv::_InputArray* src, cv::_InputArray* mask, interop::Scalar* returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::mean(*src, entity(mask)));
    });
}
CVAPI(ExceptionStatus) core_norm1(
    cv::_InputArray* src1, int normType, cv::_InputArray* mask, double *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::norm(*src1, normType, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_norm2(
    cv::_InputArray* src1, cv::_InputArray* src2,
    int normType, cv::_InputArray* mask, double* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::norm(*src1, *src2, normType, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_batchDistance(
    cv::_InputArray* src1, cv::_InputArray* src2,
    cv::_OutputArray* dist, int dtype, cv::_OutputArray* nidx,
    int normType, int K, cv::_InputArray* mask,
    int update, int crosscheck)
{
    return cvTry([&] {
    cv::batchDistance(
        *src1, *src2, *dist, dtype, *nidx, normType, K, entity(mask), update, crosscheck != 0);
    });
}
CVAPI(ExceptionStatus) core_normalize(
    cv::_InputArray* src, cv::_InputOutputArray* dst, double alpha, double beta, int normType, int dtype, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::normalize(*src, *dst, alpha, beta, normType, dtype, maskVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxLoc1(cv::_InputArray* src, double* minVal, double* maxVal)
{
    return cvTry([&] {
    cv::minMaxLoc(*src, minVal, maxVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxLoc2(cv::_InputArray* src, double* minVal, double* maxVal,
    interop::Point* minLoc, interop::Point* maxLoc, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::Point minLoc0, maxLoc0;
    cv::minMaxLoc(*src, minVal, maxVal, &minLoc0, &maxLoc0, maskVal);
    *minLoc = c(minLoc0);
    *maxLoc = c(maxLoc0);
    });
}
CVAPI(ExceptionStatus) core_minMaxIdx1(cv::_InputArray* src, double* minVal, double* maxVal)
{
    return cvTry([&] {
    cv::minMaxIdx(*src, minVal, maxVal);
    });
}
CVAPI(ExceptionStatus) core_minMaxIdx2(cv::_InputArray* src, double* minVal, double* maxVal,
    int* minIdx, int* maxIdx, cv::_InputArray* mask)
{
    return cvTry([&] {
    cv::InputArray maskVal = entity(mask);
    cv::minMaxIdx(*src, minVal, maxVal, minIdx, maxIdx, maskVal);
    });
}
CVAPI(ExceptionStatus) core_reduce(cv::_InputArray* src, cv::_OutputArray* dst, int dim, int rtype, int dtype)
{
    return cvTry([&] {
    cv::reduce(*src, *dst, dim, rtype, dtype);
    });
}
CVAPI(ExceptionStatus) core_merge(cv::Mat** mv, uint32_t count, cv::Mat* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> vec(static_cast<size_t>(count));
    for (uint32_t i = 0; i < count; i++)
        vec[i] = *mv[i];

    cv::merge(vec, *dst);
    });
}
CVAPI(ExceptionStatus) core_split(cv::Mat* src, std::vector<cv::Mat>* mv)
{
    return cvTry([&] {
    cv::split(*src, *mv);
    });
}
CVAPI(ExceptionStatus) core_mixChannels(cv::Mat** src, uint32_t nsrcs, cv::Mat** dst, uint32_t ndsts, int* fromTo, uint32_t npairs)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrcs));
    std::vector<cv::Mat> dstVec(static_cast<size_t>(ndsts));
    for (uint32_t i = 0; i < nsrcs; i++)
        srcVec[i] = *(src[i]);
    for (uint32_t i = 0; i < ndsts; i++)
        dstVec[i] = *(dst[i]);

    cv::mixChannels(srcVec, dstVec, fromTo, npairs);
    });
}
CVAPI(ExceptionStatus) core_extractChannel(cv::_InputArray* src, cv::_OutputArray* dst, int coi)
{
    return cvTry([&] {
    cv::extractChannel(*src, *dst, coi);
    });
}
CVAPI(ExceptionStatus) core_insertChannel(cv::_InputArray* src, cv::_InputOutputArray* dst, int coi)
{
    return cvTry([&] {
    cv::insertChannel(*src, *dst, coi);
    });
}
CVAPI(ExceptionStatus) core_flip(cv::_InputArray* src, cv::_OutputArray* dst, int flipCode)
{
    return cvTry([&] {
    cv::flip(*src, *dst, flipCode);
    });
}
CVAPI(ExceptionStatus) core_repeat1(cv::_InputArray* src, int ny, int nx, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::repeat(*src, ny, nx, *dst);
    });
}
CVAPI(ExceptionStatus) core_repeat2(cv::Mat* src, int ny, int nx, cv::Mat** returnValue)
{
    return cvTry([&] {
    const cv::Mat ret = cv::repeat(*src, ny, nx);
    *returnValue = new cv::Mat(ret);
    });
}
CVAPI(ExceptionStatus) core_hconcat1(cv::Mat** src, uint32_t nsrc, cv::_OutputArray* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrc));
    for (uint32_t i = 0; i < nsrc; i++)
        srcVec[i] = *(src[i]);
    cv::hconcat(&srcVec[0], nsrc, *dst);
    });
}
CVAPI(ExceptionStatus) core_hconcat2(cv::_InputArray* src1, cv::_InputArray* src2, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::hconcat(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_vconcat1(cv::Mat** src, uint32_t nsrc, cv::_OutputArray* dst)
{
    return cvTry([&] {
    std::vector<cv::Mat> srcVec(static_cast<size_t>(nsrc));
    for (uint32_t i = 0; i < nsrc; i++)
        srcVec[i] = *(src[i]);
    cv::vconcat(&srcVec[0], nsrc, *dst);
    });
}
CVAPI(ExceptionStatus) core_vconcat2(cv::_InputArray* src1, cv::_InputArray* src2, cv::_OutputArray* dst)
{
    return cvTry([&] {
    cv::vconcat(*src1, *src2, *dst);
    });
}
CVAPI(ExceptionStatus) core_bitwise_and(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_and(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_or(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_or(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_xor(
    cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_xor(*src1, *src2, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_bitwise_not(
    cv::_InputArray *src, cv::_OutputArray *dst, cv::_InputArray *mask)
{
    return cvTry([&] {
    cv::bitwise_not(*src, *dst, entity(mask));
    });
}
CVAPI(ExceptionStatus) core_eigen(cv::_InputArray *src, cv::_OutputArray *eigenvalues,    cv::_OutputArray *eigenvectors, int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::eigen(*src, *eigenvalues, *eigenvectors) ? 1 : 0;
    });
}